sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: not found: value length
    for(i<-0 to length-1){
                ^